# meego-panel-datetime

./: INSTALL  Makefile.am  autogen.sh  configure.ac
.tx/: config
po/: ar.po  ast.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  es.po  es_MX.po  eu.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  (+3 more)
src/: mnp-world-clock.c
